# PigCore

./: .gitignore  COMPILING.md  NOTES.todo  PIgGen.rdbg  PigBuild.rdbg  PigCore.raddbg  PigCore.rdbg  PigCore.sublime-project  PigCoreBuilder.raddbg  Pigglen.sublime-project  README.md  STYLE.md  build.bat  build.sh  build_config.h  build_linux.sh  build_osx.sh  build_script.c  compile_commands.json  init_emsdk.bat  init_msvc.bat  new_project.bat  pdxinfo  pig_ui_config.h  shader_include.h  tests.rdbg
PigCore.xcodeproj/: project.pbxproj
_media/: README.md
_scripts/: README.md  combine_files.py  extract_define.py  find_and_compile_shaders.py  pack_resources.py
_template/: NewPigCoreProject.sublime-project  README.md  app_helpers.c  app_main.c  app_main.h  app_resources.c  build.bat  build_config.h  defines.h  main2d_shader.glsl.c  main2d_shader.glsl.h  platform_api.c  platform_main.c  platform_main.h  resources_zip.c  resources_zip.h  shader_include.h
android/: CMakeLists.txt  build_android.bat  connect_to_avd_logcat.bat  start_avd.bat  tests_android.c
base/: README.md  base_all.h  base_assert.h  base_char.h  base_compiler_check.h  base_dbg_level.h  base_debug_output.h  base_debug_output_impl.h  base_defines_check.h  base_macros.h  base_math.h  base_notifications.h  base_notifications_impl.h  base_plex_is_struct.h  base_typedefs.h  base_unicode.h
build_system/: README.md  build_system_android_build_helpers.h  build_system_build_helpers.h  build_system_clang_flags.h  build_system_cli.h  build_system_cli_flags.h  build_system_emscripten_flags.h  (+8 more)
dll/: dll_main.c
(+461 files in other folders)
